# ChatSystem_Sockets

./: ARCHITECTURE.md  BUILD_FIX.md  BUILD_GUIDE.md  CMakeLists.txt  CONNECTION_ERRORS.md  DELIVERY_SUMMARY.md  DIAGNOSTICS.md  ERROR_10057_FIX.md  FINAL_STRUCTURE.md  GLFW_INSTALLATION.md  GUI_USER_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md
gui/: main_gui.cpp
include/gui/: ChatGui.hpp
include/networking/: ChatClient.hpp
src/: client.cpp  server.cpp
src/gui/: ChatGui.cpp
src/networking/: ChatClient.cpp
